changed phone number, capitalized proper nouns, adjusted line spacing for smaller pages, fixed navbar collaps and navbar toggle styling, adjusting font shadow for application to appear bolder

--- a/src/App.css
+++ b/src/App.css
@@ -26,23 +26,46 @@ html, body, #root {
   background: linear-gradient(to bottom, rgb(255, 255, 255) 0%, rgba(185, 208, 229, 0.956) 100%);
   z-index: 1000;    /* Ensure it's above other content */
   box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); /* Adds a subtle shadow to the navbar */
-  height: 6vh;  /* Adjust height of the navbar */
+  height: auto;  /* Adjust height of the navbar */
+}
+
+.navbar-toggler {
+  transition: box-shadow 0.3s ease-in-out, border 0.3s ease-in-out !important; /* Smooth transition for box-shadow */
+  border: 1px solid transparent !important; /* Remove the border */
+}
+
+.navbar-toggler:focus {
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2) !important; /* White glow effect */
+  outline: none !important; /* Remove the default outline */
+  border: 1px solid white !important; /* Thin white border when focused */
+}
+
+.navbar-toggler.collapsed:focus {
+  box-shadow: none !important; /* Remove the shadow when collapsed */
+  border-color: transparent !important; /* Reset the border color */
 }
 
 .navbar .navbar-nav .nav-link {
   color: #4396E8; /* Change the color of the nav links */
   font-weight: 700;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow for better readability */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-.navbar .navbar-collapse.show {
+.navbar-collapse.show .nav-link {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}
+
+.navbar .navbar-collapse ul{
   background: linear-gradient(to bottom, rgb(255, 255, 255) 0%, rgba(185, 208, 229, 0.956) 100%);
+  max-height: 100%;
 }
 
 .navbar .navbar-brand {
   color: #2c6299; /* Change the color of the navbar brand */
   font-weight: 700;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Adds a subtle shadow for better readability */
+  height: 100%;
 }
 
 
